[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/World.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.301961, 0.596078, 0.337255, 1, 0.301961, 0.596078, 0.337255, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 1024

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="CanvasModulate" type="CanvasModulate" parent="ParallaxBackground"]
color = Color( 0.129412, 0.117647, 0.145098, 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 600 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 512, 300 )
scale = Vector2( 1, 600 )
texture = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Enemies" type="Node2D" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.129412, 0.117647, 0.145098, 1 )

[node name="TileMap" type="TileMap" parent="."]
format = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="RestartMenu" type="Control" parent="GUI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="GUI/RestartMenu"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 484.0
margin_top = 270.0
margin_right = 560.0
margin_bottom = 290.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="GUI/RestartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 454.0
margin_top = 218.0
margin_right = 530.0
margin_bottom = 232.0
rect_scale = Vector2( 2, 2 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillCountLabel" type="Label" parent="GUI"]
margin_left = 8.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 22.0
text = "Kill count:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillCount" type="Label" parent="GUI"]
margin_left = 75.0
margin_top = 8.0
margin_right = 115.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="GUI"]
margin_left = 8.0
margin_top = 28.0
margin_right = 72.0
margin_bottom = 42.0
text = "Health:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="GUI"]
margin_left = 59.0
margin_top = 28.0
margin_right = 99.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="damaged" from="Player" to="." method="_on_Player_damaged"]
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="pressed" from="GUI/RestartMenu/Restart" to="." method="_on_Restart_pressed"]
